Fri Jun  3 18:54:59 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.h:

          On platforms where native long doubles aren't 16 bytes,
          eliminated case where an Any contains a CORBA::LongDouble.
          The class contains a C++ union, which can't contain a
          non-native LongDouble ( a struct) since it now has a constructor.
          A fair tradeoff since in return for the recent changes to
          ACE_CDR::LongDouble, we now have support for IDL constants
          of type CORBA::LongDouble on all platforms.

        * tests/DynAny_Test/test_dynany.cpp:

          Similarly to the above item, eliminated the test for long
          double on platforms where a non-native struct alternative
          is used.

Thu Jun  2 12:24:59 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_helper.cpp:

          - Fixed print format for long double, eliminated warnings.
          - Added '#' flag to all floating point print formats, forces
            printing of decimal point even if not present in IDL.

Wed Jun  1 19:39:08 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/AST_Expression.h:
        * TAO_IDL/ast/AST_Expression.cpp
        * TAO_IDL/ast/AST_Constant.cpp
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_ch.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_cs.cpp:

          Added support for long double constants in IDL.

        * tests/IDL_Test/constants.idl:

          Added test cases for long double constants.

        * NEWS:

          Added item about long double constant support.

Wed Jun  1 09:46:54 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/tests/AVStreams/Multicast_Full_Profile/ftp.cpp:
        * orbsvcs/tests/Log/Basic_Log_Test/client.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/client.cpp: